--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container-fluid hesapmakinesi">
         <div class="row sonuc">
             <input type="text" class="form-control hesapkutusu" id="hesap" readonly>
-            <input type="text" class="form-control sonuckutusu" id="hesap2">
+            <input type="text" class="form-control sonuckutusu" id="hesap2" readonly>
         </div>
         <div class="row ilkbolum">
             <div class="col-3 sutun">
@@ -26,7 +26,7 @@
                 <button class="tuslar rakam" id="rakam-8">8</button>
                 <button class="tuslar rakam" id="rakam-5">5</button>
                 <button class="tuslar rakam" id="rakam-2">2</button>
-                <button class="tuslar" id="kusurattusu">,</button>
+                <button class="tuslar rakam" id="kusurattusu">.</button>
             </div>
             <div class="col-3 sutun">
                 <button class="tuslar hesaptus" id="carptusu">*</button>
