--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
         </div>
     </div>
-    <script src="assets/js/hesap.js"></script>
+    <script src="/assets/js/hesap.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
